examples/fail/semantic/local_use_before_declare.bina
// EXPECT_SEMANTIC_ERROR: symbol 'x' not found
fn main() -> int {
    print(x);
    let x = 1;
    return 0;
}
